made fixed header (working with flexbox, making it stretch with left top right values) and fixed userside bar for info on school grid

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 .App-header {
   background-color: #FCB614;
   min-height: 10vh;
+  position: fixed;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -18,6 +19,10 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
   margin-top: 0;
+  margin-bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
 }
 
 .App-link {
@@ -25,3 +30,10 @@
    text-decoration: "none";
   
 }
+
+/* .Align-as-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: 100vw;
+} */
